# seerynx

./: .env.template  .gitignore  LICENSE  Makefile  README.md
api/: config.py  database.py  dependencies.py  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 94654bf27f5f_initial_schema.py  a7c3d8e91b02_strip_back_to_top_suffix.py  e2f00289997f_add_species_photo_path.py  f3a1b9c7d2e4_add_species_category.py
api/models/: orm.py  requests.py  responses.py
api/routers/: attract.py  devices.py  health.py  photos.py  sightings.py  species.py  summary.py  weather.py
api/services/: feeder_status.py
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.inference
feeder/: audio.py  camera.py  config.py  feeder.env.template  heartbeat.py  main.py  pyproject.toml  vision.py  weather.py
frontend/: eslint.config.js  index.html  nginx.conf.template  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/src/: index.css  main.tsx  vite-env.d.ts
frontend/src/app/: provider.tsx  theme-provider.tsx
frontend/src/components/: CollapsibleSection.tsx  ConfidenceBadge.tsx  FeederStatusIndicator.tsx  NotificationBell.tsx  RangeIndicator.tsx  SpeciesBadge.tsx  StatCard.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts
frontend/src/routes/: __root.tsx  calendar.tsx  (+7 more)
inference/: config.py  http_server.py  main.py  pyproject.toml
inference/models/: loader.py
inference/services/: audio.py  poster.py  vision.py
k8s/: api.yaml  frontend.yaml  inference.yaml  ingress.yaml  kustomization.yaml  mosquitto.yaml  namespace.yaml  networkpolicy.yaml  postgres.yaml
(+10 files in other folders)
