[project]
name = "seerynx-api"
version = "0.1.0"
description = "Seerynx REST API — serves bird sighting data, species info, weather readings, and attraction suggestions from a PostgreSQL database."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "websockets>=15.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
]
